--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
         <div class="result" id="result"></div>
     </div>
 
-    <script>
+    <!-- Include the EmailJS library -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        // Initialize EmailJS
+        (function() {
+            emailjs.init("user_9NGvOMes6rWxymrr");  // Replace with your EmailJS user ID
+        })();
+
         function checkAnswers() {
             var score = 0;
             var totalQuestions = 3;
@@ -95,12 +102,30 @@
             var q2 = document.querySelector('input[name="q2"]:checked');
             var q3 = document.querySelector('input[name="q3"]:checked');
 
-            // Check answers
+            // Check answers and calculate score
             if (q1 && q1.value === "Paris") score++;
             if (q2 && q2.value === "JavaScript") score++;
             if (q3 && q3.value === "Bill Gates") score++;
 
-            // Display result
+            // Store user choices
+            var userChoices = {
+                question1: q1 ? q1.value : "No answer",
+                question2: q2 ? q2.value : "No answer",
+                question3: q3 ? q3.value : "No answer"
+            };
+
+            // Send email with quiz answers using EmailJS
+            emailjs.send("service_ppctysu", "template_256ssxq", {
+                question1: userChoices.question1,
+                question2: userChoices.question2,
+                question3: userChoices.question3
+            }).then(function(response) {
+                console.log("SUCCESS!", response.status, response.text);
+            }, function(error) {
+                console.log("FAILED...", error);
+            });
+
+            // Display result (score only, not user choices)
             var result = document.getElementById('result');
             result.innerHTML = "You scored " + score + " out of " + totalQuestions;
             result.style.display = "block";
