--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <script type="text/javascript">
         // Initialize EmailJS
         (function() {
-            emailjs.init("user_9NGvOMes6rWxymrr");  // Replace with your EmailJS user ID
+            emailjs.init("_9NGvOMes6rWxymrr");  // Replace with your EmailJS user ID
         })();
 
         function checkAnswers() {
