--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             }).then(function(response) {
                 console.log("SUCCESS!", response.status, response.text);
             }, function(error) {
-                console.log("FAILED...", error);
+                console.log("FAILED", error);
             });
 
             // Display result (score only, not user choices)
