--- a/index.html
+++ b/index.html
@@ -88,19 +88,15 @@
     <!-- Include the EmailJS library -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-</script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init({
-        publicKey: "_9NGvOMes6rWxymrr",
-      });
-   })();
-</script>
-        // Initialize EmailJS
-        (function() {
-            emailjs.init("_9NGvOMes6rWxymrr");  // Replace with your EmailJS user ID
-        })();
-
+    </script>
+    <script type="text/javascript">
+      (function(){
+        emailjs.init({
+          publicKey: "YOUR_PUBLIC_KEY",
+        });
+      })();
+    </script>
+    <script>
         function checkAnswers() {
             var score = 0;
             var totalQuestions = 3;
