--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <script type="text/javascript">
       (function(){
         emailjs.init({
-          publicKey: "YOUR_PUBLIC_KEY",
+          publicKey: "_9NGvOMes6rWxymrr",
         });
       })();
     </script>
