--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             };
 
             // Send email with quiz answers using EmailJS
-            emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
+            emailjs.send("service_ppctysu", "template_256ssxq", {
                 question1: userChoices.question1,
                 question2: userChoices.question2,
                 question3: userChoices.question3,
